--- a/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
+++ b/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
@@ -883,7 +883,7 @@
         <section id="mainContent">
             <div id="everyKitu" class="allThings">
                 <div class="imageContainer" data-poze="National Coordinator">
-                    <img src="../Passports/Eligibo.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Eligibo Leodigard Kavishe.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -894,17 +894,17 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Class President">
-                    <img src="icon1.png" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Jeremiah Joseph Mush.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
                         </div>
                         <i class="fas fa-podcast" onplaying="Jeremiah Joseph Mushi " onclick="showThisCust(this)"></i>
-                        <div class="descTxt">Jeremiah Joseph Mushi </div>
+                        <div class="descTxt">Jeremiah Joseph Mushi</div>
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Class Vice President">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0078.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Joseph Safisha Mnyankal.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -914,7 +914,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Class Secretary">
-                    <img src="../Passports/Dorcas.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Dorcas Eligibo Kavishe.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -924,7 +924,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Time Keeper">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0006.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Joseph Mariatabu Kyameli Mushi.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -936,7 +936,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Tresurer">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0055.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Esther Abel Laizer.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -946,7 +946,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/Judith.jpg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Judith Joseph Mushi.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -956,7 +956,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0019.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Alex Samson Kiuko.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -966,7 +966,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0004.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Aminieli David Mgonja.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -976,7 +976,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0010.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Anderson Julius Mathayo.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -986,7 +986,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0027.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Angela Amami Luter.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -996,7 +996,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0074.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Daniel Yohana Vaneth.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1006,7 +1006,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0060.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Florence Joseph Mollel.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1016,7 +1016,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0048.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Godliving James Urassa.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1026,7 +1026,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0051.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Patrick Veriani Kiwango.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1036,7 +1036,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0068.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Irene Elias Menana.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1046,7 +1046,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/Sabina.jpg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Sabina Peter Dunvey.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1056,7 +1056,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0045.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Laheri Mailo Machumber.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1066,7 +1066,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0083.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Gloria Adamu Mkongwa.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1076,7 +1076,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0065.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Beatrice Jastine Kimario.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1086,7 +1086,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0043.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Lucy Elias Muhoma.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1096,7 +1096,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0041.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Beatrice Bryson Kiharuzi.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1106,17 +1106,17 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0029.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Joyce Nestory Mlacha.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
                         </div>
                         <i class="fas fa-podcast" onplaying="Joyce Nestory Mlacha " onclick="showThisCust(this)"></i>
-                        <div class="descTxt">Joyce Nestory Mlacha </div>
+                        <div class="descTxt">Joyce Nestory Mlacha</div>
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0025.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Dina Maullo Mbogo.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1126,7 +1126,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0070.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Rachel David Mfunanga.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1136,7 +1136,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0076.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Speratus Kassa.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1146,7 +1146,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0039.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Laurent Enea Madeghe.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1156,7 +1156,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0033.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Joseph Emanuel Ayo.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1166,7 +1166,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0021.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Seth Emmanuel Gundula.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1176,17 +1176,17 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0037.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Seth Emanuely Seth.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
                         </div>
                         <i class="fas fa-podcast" onplaying="Seth Emanuely Seth " onclick="showThisCust(this)"></i>
-                        <div class="descTxt">Seth Emanuely Seth </div>
+                        <div class="descTxt">Seth Emanuely Seth</div>
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Jacob Ayubu Urassa.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1196,7 +1196,7 @@
                     </div>
                 </div>
                 <div class="imageContainer" data-poze="Student">
-                    <img src="../Passports/added@17-10-2022/IMG-20221011-WA0053.jpeg" alt="">
+                    <img src="../Passports/addedPassports@18-10-2022/Elisha John Mollel.png" alt="">
                     <div class="desc">
                         <div class="download">
                             <a download><i class="fas fa-download"></i></a>
@@ -1226,7 +1226,7 @@
                 <div class="snap" onclick="menu11.click()">
                     <div class="upper">
                         <i style="color: rgb(111, 18, 139)" class="iconn fas fa-image"></i>
-                        <div class="number">31</div>
+                        <div class="number">32</div>
                     </div>
                     <div class="lower">
                         <span class="title">Pictures</span>
