--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 <p>As a title to me, a computer scientist specialized on financial management systems describes me
                     easily. Computer science (CS) related projects are mostly what I am used to and it is what I shortly
                     like to relate my skills on when expressing what I am capable of doing. Though, if required in
-                    person, I can talk about my exceptional accounting math techniques. My life history is bult in
+                    person, I can talk about my exceptional accounting math techniques. My life history is built in
                     music, it is more like a culture rather than a career to me!.
                 </p>
                 <a href="Documents/jeremiah-cv.pdf" class="cta" download>Download Resume</a>
