--- a/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
+++ b/galleryKakaJere/gallery_GBTC/galleryGBTC/index.html
@@ -935,7 +935,7 @@
                         <div class="descTxt" style="width: 70%">Joseph Mariatabu Kyameli Mushi</div>
                     </div>
                 </div>
-                <div class="imageContainer" data-poze="Tresurer">
+                <div class="imageContainer" data-poze="Treasurer">
                     <img src="../Passports/addedPassports@18-10-2022/Esther Abel Laizer.png" alt="">
                     <div class="desc">
                         <div class="download">
