--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
     <!-- End gallery pic -->
     <div class="thankss" id="thankss">
-        Thank you, you will receive a respose after a short period of time
+        Thank you, you will receive a response after a short period of time
     </div>
     <!-- Hire Me Dialog -->
     <div id="hireMeDialg">
